<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/navigation_mall"
        android:enabled="true"
        android:icon="@drawable/ic_shopping_basket_black_24dp"
        android:title="@string/menu_mall" />
    <item
        android:id="@+id/navigation_cart"
        android:enabled="true"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:title="@string/menu_cart" />
    <item
        android:id="@+id/navigation_account"
        android:enabled="true"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/menu_account" />
</menu>