<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.MaterialComponents.DayNight"
    android:orientation="vertical"
    android:layout_marginLeft="24dp"
    android:layout_marginRight="24dp"
    android:gravity="center"
    tools:context=".ui.UserInfoActivity">

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:boxBackgroundMode="outline"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        app:boxCornerRadiusBottomStart="16dp"-->
<!--        app:boxCornerRadiusBottomEnd="16dp"-->
<!--        app:boxCornerRadiusTopEnd="16dp"-->
<!--        app:boxCornerRadiusTopStart="16dp"-->
<!--        android:hint="@string/username"-->
<!--        app:endIconMode="clear_text"-->
<!--        app:startIconDrawable="@drawable/ic_person_black_24dp" >-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"/>-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:boxBackgroundMode="outline"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        app:boxCornerRadiusBottomStart="16dp"-->
<!--        app:boxCornerRadiusBottomEnd="16dp"-->
<!--        app:boxCornerRadiusTopEnd="16dp"-->
<!--        app:boxCornerRadiusTopStart="16dp"-->
<!--        app:endIconMode="password_toggle"-->
<!--        android:hint="@string/password"-->
<!--        android:layout_marginTop="10dp"-->
<!--        app:startIconDrawable="@drawable/ic_vpn_key_black_24dp" >-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:inputType="textPassword"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"/>-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        app:boxBackgroundMode="outline"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_person_black_24dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp" >

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/Name"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        app:boxBackgroundMode="outline"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_phone_black_24dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp" >

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/Phone"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableTint="@color/grey_400" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        app:boxBackgroundMode="outline"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_place_black_24dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp" >

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/Address"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        app:boxBackgroundMode="outline"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_business_black_24dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp" >

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/City"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        app:boxBackgroundMode="outline"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_mail_black_24dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp" >

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        app:boxBackgroundMode="outline"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_cake_black_24dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp" >

        <com.google.android.material.textfield.TextInputEditText
            android:hint="Ngày sinh"
            android:layout_width="match_parent"
            android:inputType="datetime"
            android:layout_height="match_parent"
             />

    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_marginStart="13dp"
            android:tint="@color/grey_700"
            android:layout_gravity="center"
            android:src="@drawable/ic_wc_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="16dp"
            android:layout_marginStart="13dp"
            android:layout_gravity="center"
            android:text="Giới tính :"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/first"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />
        </RadioGroup>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Update" />
</LinearLayout>